# mercari-bot

./: .gitlab-ci.yml  .ruff.toml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  config.example.yaml  config.schema  pyproject.toml
.github/workflows/: docker.yaml  release.yaml  test.yaml
.gitlab/: ci-local.yml
doc/: architecture.md
kubernetes/: mercari-bot.yaml
schema/: config.schema  history.schema.sql
src/: app.py  demo.py
src/mercari_bot/: __main__.py  cli.py  config.py  exceptions.py  history.py  logic.py  mercari_price_down.py  notify_slack.py  progress.py
tests/: conftest.py  test_typecheck.py
tests/evidence/: index.htm
tests/fixtures/: mercari_item_titles.json
tests/unit/: test_app.py  test_config.py  test_demo.py  test_history.py  test_logic.py  test_mercari_price_down.py  test_notify_slack.py  test_progress.py
